Unspecified checks on NameAndType constants should not be performed

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 18
    • Affects Version/s: 18
    • Component/s: hotspot
    • None
    • b04

      The JVM should not perform unspecified checks on NameAndType constants. For example, the NameAndType constant <init>:()D is legal, per the specification, and should not cause a ClassFormatError unless and until it is referenced by a Methodref constant.

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            Harold Seigel (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: