8268720: Unspecified checks on NameAndType constants should not be performed